# pac-hunter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  demo.ipynb  fraypac.ipynb  jan6-house-deniers.csv  jan6-senate-deniers.csv  pyproject.toml  raypac-house-2020.csv  raypac-senate-2020.csv  requirements.txt  states.py
pac_hunter/: hunter.py  states.py  utils.py
