[tool.poetry]
name = "pac-hunter"
version = "0.1.1"
description = "Search donations from specific PACs to candidates of interest, using OpenFEC and fivethirtyeight data"
authors = ["jlwhelan28 <jlwhelan28@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pac_hunter"}]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23"
pandas = "^1.5"
thefuzz = "^0.19"
requests = "^2.28"
seaborn = "^0.12"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20"
pytest = "^7.2"
mypy = "*"
types-requests = "^2.28"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
